Fixing responsive by adding a height of 100% on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -84,5 +84,6 @@ body {
   }
   @include mobile {
     border-radius: 0px;
+    height: 100%;
   }
 }
